feat: getBrand Test and pagination